--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url(../Images/fundo.jpg);
+  background-image: url(../Images/thalia/4.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -16,10 +16,9 @@ body {
 .card {
   background-color: #070b12;
   width: 370px;
-  border: 2px solid #e126d9;
+  border: 2px solid palevioletred;
   border-radius: 10px;
-  overflow: hidden;
-
+  overflow: initial;
 }
 
 .card .minhas-info {
@@ -32,7 +31,7 @@ body {
 
 .card .minhas-info img {
   border-radius: 35px;
-  border: 4px solid #02b08f;
+  border: 2px solid crimson;
   width: 96px;
   height: 96px;
 }
@@ -71,13 +70,11 @@ body {
   background-color: #262626;
 }
 
-.card .abas .aba.selecionada2 {
-  background-color: red;
-}
 
 .card .info-abas {
   background-color: #262626;
 }
+
 
 .card .abas .aba:hover {
   background-color: #414141;
@@ -114,47 +111,129 @@ body {
 }
 
 .info-abas .descricao::-webkit-scrollbar-thumb {
-  background-color: blueviolet;
+  background-color: crimson;
   border-radius: 25px;
 }
 
+.info-abas .descricao .spanTitulo {
+  color: darkcyan;
+}
+
+.info-abas .descricao .spanTitulo::after {
+  content: '|';
+  margin-left: 5px;
+  opacity: 1;
+  animation: coding .7s infinite;
+}
+
+@keyframes coding {
+
+  0%,
+  100% {
+    opacity: 0
+  }
+
+  50% {
+    opacity: 1;
+  }
+}
 
 
 .info-abas .descricao span {
   color: #02b08f;
 }
 
-.midias-sociais {
-  display: flex;
-  flex-direction: column;
-  gap: 25px;
-  align-items: center;
-  max-height: 180px;
-  overflow-y: auto;
+.container {
+  position: relative;
+  padding: 15px;
+  max-width: 640px;
+  margin: 0 auto;
 }
 
-.midias-sociais li a {
-  width: 250px;
-  display: block;
-  color: #f3f3f3;
-  text-align: center;
-  padding: 10px;
+.gallery-wrapper {
+  overflow-x: auto;
+}
+
+.arrow-left,
+.arrow-right {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: auto;
+  bottom: 0;
   font-size: 20px;
-  transition: opacity 0.3s ease-in-out;
+  line-height: 250px;
+  width: 40px;
+  color: #fff;
+  transition: all 0.4s ease-in-out;
+  background: linear-gradient(to left, transparent 0%, black 200%);
+  opacity: 0.1;
+  cursor: pointer;
+  border: none;
 }
 
-.midias-sociais .curriculo {
-  background-color: #06c185;
+.arrow-left:hover,
+.arrow-right:hover {
+  opacity: 1;
 }
 
-.midias-sociais .linkedin {
-  background-color: #1d87bd;
+.arrow-right {
+  right: 0;
+  left: auto;
+  text-align: right;
+  background: linear-gradient(to right, transparent 0%, black 200%);
 }
 
-.midias-sociais .github {
-  background-color: #545454;
+.gallery {
+  display: flex;
+  flex-flow: row nowrap;
+  gap: 15px;
 }
 
-.midias-sociais li a:hover {
-  opacity: 0.7;
+.item {
+  width: 250px;
+  height: 200px;
+  flex-shrink: 0;
+  transition: all 600ms ease-in-out;
+  opacity: 0.5;
+}
+
+.current-item {
+  opacity: 1;
+}
+
+/* This is from w3schools */
+/* 
+https://www.w3schools.com/howto/howto_css_hide_scrollbars.asp */
+/* Hide scrollbar for Chrome, Safari and Opera */
+.gallery-wrapper::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.gallery-wrapper {
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
+}
+
+.cyan {
+  background: cyan;
+}
+
+.deeppink {
+  background: deeppink;
+}
+
+.turquoise {
+  background: turquoise;
+}
+
+.darkblue {
+  background: darkblue;
+}
+
+.purple {
+  background: purple;
 }
